--- a/src/app/pages/menu/subcategory-list/subcategory-list.component.html
+++ b/src/app/pages/menu/subcategory-list/subcategory-list.component.html
@@ -1,12 +1,13 @@
-<!-- <app-product-list *ngIf="(subCategories$ | async)?.length !== 0"  [categoryId]="parentCategoryId"></app-product-list> -->
-
 <nb-tabset>
-    <nb-tab *ngIf="(subCategories$ | async)?.length !== 0"   [tabTitle]="parentCategoryName">
+    <nb-tab *ngIf="subCategories.length !== 0" [tabTitle]="parentCategoryName">
         <app-product-list [categoryId]="parentCategoryId"></app-product-list>
     </nb-tab>
-    <nb-tab *ngFor="let subCategory of subCategories$ | async" tabTitle='{{subCategory.name}}'>
-        <app-product-list *ngIf="(subCategories$ | async)?.length === 0"  [categoryId]="subCategory.id"></app-product-list>
-        <app-subcategory-list  [parentCategoryName]="subCategory.name" [parentCategoryId] = "subCategory.id"></app-subcategory-list>
+    <nb-tab *ngFor="let subCategory of subCategories" tabTitle='{{subCategory.name}}'>
+        <app-product-list *ngIf="subCategories.length === 0" [categoryId]="subCategory.id">
+        </app-product-list>
+        <app-subcategory-list [parentCategoryName]="subCategory.name" [parentCategoryId]="subCategory.id">
+        </app-subcategory-list>
     </nb-tab>
 </nb-tabset>
-<app-product-list *ngIf="(subCategories$ | async)?.length === 0"[categoryId]="parentCategoryId"></app-product-list>
+<app-product-list *ngIf="subCategories.length === 0" [categoryId]="parentCategoryId">
+</app-product-list>
