--- a/src/themes.scss
+++ b/src/themes.scss
@@ -15,5 +15,6 @@ $nb-themes: nb-register-theme((
   // color-primary-700: #1a34b8,
   // color-primary-800: #102694,
   // color-primary-900: #091c7a,
+  background-basic-color-3: #ffffff
 
 ), default, default);
