--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,56 +1,204 @@
-<app-carousel></app-carousel>
 
-<hr>
 
-<div class="container text-center">
-  <h3>Choisissez votre commande</h3>
-</div>
+<!--<section class="offer_section layout_padding-bottom">-->
+<!--  <div class="offer_container">-->
+<!--    <div class="container ">-->
+<!--      <div class="row">-->
+<!--        <div class="col-md-6  ">-->
+<!--          <div class="box ">-->
+<!--            <div class="img-box">-->
+<!--              <img src="images/o1.jpg" alt="">-->
+<!--            </div>-->
+<!--            <div class="detail-box">-->
+<!--              <h5>-->
+<!--                Tasty Thursdays-->
+<!--              </h5>-->
+<!--              <h6>-->
+<!--                <span>20%</span> Off-->
+<!--              </h6>-->
+<!--              <a href="">-->
+<!--                Order Now <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">-->
+<!--                    <g>-->
+<!--                      <g>-->
+<!--                        <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248-->
+<!--                     c29.184,0,53.248-23.552,53.248-53.248C398.336,362.926,374.784,338.862,345.6,338.862z" />-->
+<!--                      </g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                      <g>-->
+<!--                        <path d="M439.296,84.91c-1.024,0-2.56-0.512-4.096-0.512H112.64l-5.12-34.304C104.448,27.566,84.992,10.67,61.952,10.67H20.48-->
+<!--                     C9.216,10.67,0,19.886,0,31.15c0,11.264,9.216,20.48,20.48,20.48h41.472c2.56,0,4.608,2.048,5.12,4.608l31.744,216.064-->
+<!--                     c4.096,27.136,27.648,47.616,55.296,47.616h212.992c26.624,0,49.664-18.944,55.296-45.056l33.28-166.4-->
+<!--                     C457.728,97.71,450.56,86.958,439.296,84.91z" />-->
+<!--                      </g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                      <g>-->
+<!--                        <path d="M215.04,389.55c-1.024-28.16-24.576-50.688-52.736-50.688c-29.696,1.536-52.224,26.112-51.2,55.296-->
+<!--                     c1.024,28.16,24.064,50.688,52.224,50.688h1.024C193.536,443.31,216.576,418.734,215.04,389.55z" />-->
+<!--                      </g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                  </svg>-->
+<!--              </a>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="col-md-6  ">-->
+<!--          <div class="box ">-->
+<!--            <div class="img-box">-->
+<!--              <img src="images/o2.jpg" alt="">-->
+<!--            </div>-->
+<!--            <div class="detail-box">-->
+<!--              <h5>-->
+<!--                Pizza Days-->
+<!--              </h5>-->
+<!--              <h6>-->
+<!--                <span>15%</span> Off-->
+<!--              </h6>-->
+<!--              <a href="">-->
+<!--                Order Now <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">-->
+<!--                    <g>-->
+<!--                      <g>-->
+<!--                        <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248-->
+<!--                     c29.184,0,53.248-23.552,53.248-53.248C398.336,362.926,374.784,338.862,345.6,338.862z" />-->
+<!--                      </g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                      <g>-->
+<!--                        <path d="M439.296,84.91c-1.024,0-2.56-0.512-4.096-0.512H112.64l-5.12-34.304C104.448,27.566,84.992,10.67,61.952,10.67H20.48-->
+<!--                     C9.216,10.67,0,19.886,0,31.15c0,11.264,9.216,20.48,20.48,20.48h41.472c2.56,0,4.608,2.048,5.12,4.608l31.744,216.064-->
+<!--                     c4.096,27.136,27.648,47.616,55.296,47.616h212.992c26.624,0,49.664-18.944,55.296-45.056l33.28-166.4-->
+<!--                     C457.728,97.71,450.56,86.958,439.296,84.91z" />-->
+<!--                      </g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                      <g>-->
+<!--                        <path d="M215.04,389.55c-1.024-28.16-24.576-50.688-52.736-50.688c-29.696,1.536-52.224,26.112-51.2,55.296-->
+<!--                     c1.024,28.16,24.064,50.688,52.224,50.688h1.024C193.536,443.31,216.576,418.734,215.04,389.55z" />-->
+<!--                      </g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                <g>-->
+<!--                    </g>-->
+<!--                  </svg>-->
+<!--              </a>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</section>-->
 
-<div class="d-md-flex flex-md-equal w-100 my-md-3 justify-content-center">
-  <div class="bg-light mx-3 pt-3 px-3 pb-5 pt-md-5 px-md-5 text-center overflow-hidden col-5">
-    <div class="my-3">
-      <h2 class="display-4">Sur place</h2>
-      <p class="lead">
-        <mat-icon> restaurant</mat-icon>
-      </p>
-    </div>
-    <a class="btn btn-outline-secondary my-5 vertical-align" routerLinkActive="active" routerLink="/menu">
-      Réserver
-    </a>
-  </div>
-  <div class="bg-light mx-3 pt-3 px-3 pb-5 pt-md-5 px-md-5 text-center overflow-hidden col-5">
-    <div class="my-3">
-      <h2 class="display-4">En livraison</h2>
-      <p class="lead">
-        <mat-icon>motorcycle</mat-icon>
-      </p>
-    </div>
-    <a class="btn btn-outline-secondary my-5" routerLinkActive="active" routerLink="/menu">
-      Commander
-    </a>
-  </div>
-</div>
 
-<hr>
+<!--<hr>-->
 
-<div class="d-md-flex flex-md-equal w-100 my-md-3 justify-content-center">
-  <div class="bg-light mx-3 pt-3 px-3 pb-5 pt-md-5 px-md-5 text-center overflow-hidden col-8">
-    <div class="my-3">
-      <h2 class="display-4">Notre approche</h2>
-    </div>
-    <a class="btn btn-outline-secondary my-5 vertical-align" routerLinkActive="active" routerLink="/approach">
-      En savoir plus
-    </a>
-  </div>
-</div>
+<!--<div class="container text-center">-->
+<!--  <h3>Choisissez votre commande</h3>-->
+<!--</div>-->
 
-<hr>
+<!--<div class="d-md-flex flex-md-equal w-100 my-md-3 justify-content-center">-->
+<!--  <div class="bg-light mx-3 pt-3 px-3 pb-5 pt-md-5 px-md-5 text-center overflow-hidden col-5">-->
+<!--    <div class="my-3">-->
+<!--      <h2 class="display-4">Sur place</h2>-->
+<!--      <p class="lead">-->
+<!--        <mat-icon> restaurant</mat-icon>-->
+<!--      </p>-->
+<!--    </div>-->
+<!--    <a class="btn btn-outline-secondary my-5 vertical-align" routerLinkActive="active" routerLink="/menu">-->
+<!--      Réserver-->
+<!--    </a>-->
+<!--  </div>-->
+<!--  <div class="bg-light mx-3 pt-3 px-3 pb-5 pt-md-5 px-md-5 text-center overflow-hidden col-5">-->
+<!--    <div class="my-3">-->
+<!--      <h2 class="display-4">En livraison</h2>-->
+<!--      <p class="lead">-->
+<!--        <mat-icon>motorcycle</mat-icon>-->
+<!--      </p>-->
+<!--    </div>-->
+<!--    <a class="btn btn-outline-secondary my-5" routerLinkActive="active" routerLink="/menu">-->
+<!--      Commander-->
+<!--    </a>-->
+<!--  </div>-->
+<!--</div>-->
 
-<div class="p-5 mb-4 bg-light rounded-3 container">
-  <div class="container py-5">
-    <h1 class="display-5 fw-bold">{{ "Home" | translate }}</h1>
-    <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous
-      versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-    <button class="btn btn-primary btn-lg" type="button">Example button</button>
-  </div>
-</div>
+<!--<hr>-->
+
+<!--<div class="d-md-flex flex-md-equal w-100 my-md-3 justify-content-center">-->
+<!--  <div class="bg-light mx-3 pt-3 px-3 pb-5 pt-md-5 px-md-5 text-center overflow-hidden col-8">-->
+<!--    <div class="my-3">-->
+<!--      <h2 class="display-4">Notre approche</h2>-->
+<!--    </div>-->
+<!--    <a class="btn btn-outline-secondary my-5 vertical-align" routerLinkActive="active" routerLink="/approach">-->
+<!--      En savoir plus-->
+<!--    </a>-->
+<!--  </div>-->
+<!--</div>-->
+
+<!--<hr>-->
+
+<!--<div class="p-5 mb-4 bg-light rounded-3 container">-->
+<!--  <div class="container py-5">-->
+<!--    <h1 class="display-5 fw-bold">{{ "Home" | translate }}</h1>-->
+<!--    <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous-->
+<!--      versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>-->
+<!--    <button class="btn btn-primary btn-lg" type="button">Example button</button>-->
+<!--  </div>-->
+<!--</div>-->
