--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1009,28 +1009,22 @@ a:focus {
   font-family: 'Dancing Script', cursive;
 }
 
-.footer_section p {
-  color: #dbdbdb;
-}
+// CSS Reset, comment out if not required or using a different module
+//@import '~minireset.css/minireset';
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
 
-.footer_section .footer-col {
-  margin-bottom: 30px;
-}
+@import "~igniteui-angular/lib/core/styles/themes/index";
+// Uncomment the following lines if you want to add a custom palette:
+// $primary: #731963 !default;
+// $secondary: #ce5712 !default;
+// $app-palette: igx-palette($primary, $secondary);
 
-.footer_section .footer_contact .contact_link_box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-}
+/* autoprefixer grid: on */
 
-.footer_section .footer_contact .contact_link_box a {
-  margin: 5px 0;
-  color: #ffffff;
-}
+@include igx-core();
+@include igx-typography($font-family: $material-typeface, $type-scale: $material-type-scale);
+@include igx-theme($default-palette);
 
 .footer_section .footer_contact .contact_link_box a i {
   margin-right: 5px;
