--- a/src/app/pages/Shared/components/carousel/carousel.component.html
+++ b/src/app/pages/Shared/components/carousel/carousel.component.html
@@ -1,5 +1,7 @@
-<!-- slider section -->
-<section class="slider_section ">
+<section class="slider_section">
+<!--  <div class="bg-box">-->
+<!--    <img src="./../../../../../assets/images/hero-bg.jpg" alt="hero-bg.jpg">-->
+<!--  </div>-->
   <div id="customCarousel1" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -75,4 +77,3 @@
     </div>
   </div>
 </section>
-<!-- end slider section -->
