--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -7,3 +7,9 @@ hr{
 mat-icon{
   font-size: xxx-large;
 }
+
+.offer_section .box .img-box img {
+  width: 165px;
+  height: 165px;
+  object-fit: cover;
+}
