--- a/src/app/pages/Shared/components/carousel/carousel.component.scss
+++ b/src/app/pages/Shared/components/carousel/carousel.component.scss
@@ -1,3 +1,13 @@
-mat-carousel-slide {
-  height: 92vh;
+section.slider_section {
+  background-image: url("./../../../../../assets/images/hero-bg.jpg");
+  min-height: 90vh;
+  background-size: cover;
 }
+
+section.slider_section img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
