--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,129 @@
+<app-carousel></app-carousel>
 
+<section class="offer_section layout_padding-bottom">
+  <div class="offer_container">
+    <div class="container ">
+      <div class="row">
+        <div class="col-md-6  ">
+          <div class="box ">
+            <div class="img-box">
+              <img src="assets/images/home/onseat.jpeg" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+                A emporter ?
+              </h5>
+              <h6>
+                <span></span>
+              </h6>
+              <a>
+                Réservez !
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6  ">
+          <div class="box ">
+            <div class="img-box">
+              <img src="../../../assets/images/home/delivery.jpeg" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+                En livraison ?
+              </h5>
+              <h6>
+                <span></span>
+              </h6>
+              <a>
+                Commandez !
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="about_section layout_padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 ">
+        <div class="img-box">
+          <img src="assets/images/about-img.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="detail-box">
+          <div class="heading_container">
+            <h2>
+              We Are Feane
+            </h2>
+          </div>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            in some form, by injected humour, or randomised words which don't look even slightly believable. If you
+            are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
+            the middle of text. All
+          </p>
+          <a href="">
+            Read More
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="client_section layout_padding-bottom">
+  <div class="container">
+    <div class="heading_container heading_center psudo_white_primary mb_45">
+      <h2>
+        What Says Our Customers
+      </h2>
+    </div>
+    <div class="carousel-wrap row ">
+      <div class="owl-carousel client_owl-carousel">
+        <div class="item">
+          <div class="box">
+            <div class="detail-box">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+              </p>
+              <h6>
+                Moana Michell
+              </h6>
+              <p>
+                magna aliqua
+              </p>
+            </div>
+            <div class="img-box">
+              <img src="images/client1.jpg" alt="" class="box-img">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="box">
+            <div class="detail-box">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+              </p>
+              <h6>
+                Mike Hamell
+              </h6>
+              <p>
+                magna aliqua
+              </p>
+            </div>
+            <div class="img-box">
+              <img src="images/client2.jpg" alt="" class="box-img">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!--<section class="offer_section layout_padding-bottom">-->
 <!--  <div class="offer_container">-->
