--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header_section">
+<header class="header_section" style="background-color:black;">
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg custom_nav-container ">
       <a class="navbar-brand" href="index.html">
@@ -36,7 +36,7 @@
         <ul class="navbar-nav user_option">
           <li class="nav-item">
             <div class="dropdown">
-              <button class="btn nav_search-btn dropdown-toggle" type="button" id="dropdownMenuButton"
+              <button class="btn nav_search-btn dropdown-toggle" type="button"
                       data-toggle="dropdown" aria-expanded="false">
                 <i class="fa fa-user" aria-hidden="true"></i>
               </button>
@@ -61,13 +61,14 @@
           </li>
           <li class="nav-item">
             <div class="dropdown">
-              <button class="btn nav_search-btn dropdown-toggle" type="button" id="dropdownMenuButton"
-                      data-toggle="dropdown" aria-expanded="false">
-                <i class="fa-solid fa-cart-shopping" aria-hidden="true"></i>
-              </button>
-              <div class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item nav-link">Opt1</a>
-                <a class="dropdown-item nav-link">Opt2</a>
+                            <button class="btn nav_search-btn dropdown-toggle" type="button"
+                                    data-toggle="dropdown" aria-expanded="false">
+                              <i class="fa-solid fa-cart-shopping" aria-hidden="true"></i>
+                            </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
               </div>
             </div>
           </li>
@@ -98,13 +99,19 @@
 
           <li class="nav-item">
             <div class="dropdown">
-              <button class="btn nav_search-btn dropdown-toggle" type="button" id="dropdownMenuButton"
+              <button class="btn nav_search-btn dropdown-toggle" type="button"
                       data-toggle="dropdown" aria-expanded="false">
                 <i class="fa-solid fa-flag" aria-hidden="true"></i>
               </button>
-              <div class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item nav-link" (click)="setLanguage('fr')">{{ "header.lang.fr" | translate }}</a>
-                <a class="dropdown-item nav-link" (click)="setLanguage('en')">{{ "header.lang.en" | translate }}</a>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" (click)="setLanguage('fr')">
+                  <img src="https://img.icons8.com/color/50/000000/france.png" class="flag-icon"/>
+                  {{ "header.lang.fr" | translate }}
+                </a>
+                <a class="dropdown-item" (click)="setLanguage('en')">
+                  <img src="https://img.icons8.com/color/50/000000/england.png" class="flag-icon"/>
+                  {{ "header.lang.en" | translate }}
+                </a>
               </div>
             </div>
           </li>
