--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,16 +1,15 @@
-
-    <div class="p-5 mb-4 bg-light rounded-3">
-      <div class="container py-5">
-        <h1 class="display-5 fw-bold">{{ "menu.page-title" | translate }}</h1>
-        <p class="col-md-8 fs-4">{{ "menu.page-description" | translate }}</p>
-      </div>
-      <nb-tabset>
-        <nb-tab *ngFor="let parentCategory of parentsCategories$ | async" tabTitle='{{parentCategory.name}}'>
-          <app-subcategory-list [parentCategoryName]="parentCategory.name" [parentCategoryId]="parentCategory.id">
-          </app-subcategory-list>
-        </nb-tab>
-      </nb-tabset>
-    </div>
+<div class="p-5 mb-4  rounded-3">
+  <div class="container py-5">
+    <h1 class="display-5 fw-bold">{{ "menu.page-title" | translate }}</h1>
+    <p class="col-md-8 fs-4">{{ "menu.page-description" | translate }}</p>
+  </div>
+  <nb-tabset>
+    <nb-tab *ngFor="let parentCategory of parentsCategories$ | async" tabTitle='{{parentCategory.name}}'>
+      <app-subcategory-list [parentCategoryName]="parentCategory.name" [parentCategoryId]="parentCategory.id">
+      </app-subcategory-list>
+    </nb-tab>
+  </nb-tabset>
+</div>
 
 
 
