--- a/src/themes.scss
+++ b/src/themes.scss
@@ -2,6 +2,8 @@
 @import '~@nebular/theme/styles/themes/default';
 @import '~@nebular/theme/styles/themes/cosmic';
 
+$nb-enable-css-custom-properties: true;
+
 $nb-themes: nb-register-theme((
 
   // add your variables here like:
@@ -15,6 +17,5 @@ $nb-themes: nb-register-theme((
   // color-primary-700: #1a34b8,
   // color-primary-800: #102694,
   // color-primary-900: #091c7a,
-  background-basic-color-3: #ffffff
 
 ), default, default);
