--- a/src/app/pages/cart/cart/cart.component.html
+++ b/src/app/pages/cart/cart/cart.component.html
@@ -1,11 +1,16 @@
-<nb-card>
-    <nb-card-body>
+<nb-layout>
+  <nb-layout-column>
+    <nb-card>
+      <nb-card-body>
         <div class="row col">
-            <h1 id="title" class="title text-center">{{"cart.title" | translate }}</h1>
+          <h1 id="title" class="title text-center">{{"cart.title" | translate }}</h1>
         </div>
         <div>
-            <app-shopping-cart-item *ngFor="let groupedCommandeProduct of getCommandeProductByKeyAndCommentArrays()"
-                [groupedCommandeProduct]="groupedCommandeProduct"></app-shopping-cart-item>
+          <app-shopping-cart-item *ngFor="let groupedCommandeProduct of getCommandeProductByKeyAndCommentArrays()"
+                                  [groupedCommandeProduct]="groupedCommandeProduct">
+          </app-shopping-cart-item>
         </div>
-    </nb-card-body>
-</nb-card>
+      </nb-card-body>
+    </nb-card>
+  </nb-layout-column>
+</nb-layout>
