--- a/src/app/templates/footer/footer.component.html
+++ b/src/app/templates/footer/footer.component.html
@@ -40,11 +40,11 @@
         <p>{{ "footer.opening-hours" | translate }}</p>
       </div>
     </div>
-    <div class="footer-info">
-      <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
-      </p>
-    </div>
+<!--    <div class="footer-info">-->
+<!--      <p>-->
+<!--        &copy; <span id="displayYear"></span> All Rights Reserved By-->
+<!--        <a href="https://html.design/">Free Html Templates</a>-->
+<!--      </p>-->
+<!--    </div>-->
   </div>
 </footer>
