--- a/src/app/templates/header/header.component.scss
+++ b/src/app/templates/header/header.component.scss
@@ -1,16 +1,9 @@
-//.dropdown-menu {
-//  height: auto !important;
-//  //background-color: transparent !important;
-//  //border: none;
-//}
-//
-//.dropdown-item:hover {
-//  //background-color:transparent !important;
-//  cursor: pointer !important;
-//}
-
 .custom_nav-container .navbar-nav {
   padding: 0;
+}
+
+a.nav-link.active {
+  color: #fbbe34!important;
 }
 
 .custom_nav-container .navbar-nav .nav-item .nav-link {
@@ -20,16 +13,7 @@
 ul.navbar-nav.user_option {
   display: flex;
   flex-direction: row;
-  //justify-content: center;
 }
-
-//a.dropdown-item {
-//  margin: 0;
-//}
-//
-//.dropdown-menu.bg-dark.show {
-//  border: 1px solid #ffbe33;
-//}
 
 .flag-icon {
   width: 1rem;
