--- a/src/styles.scss
+++ b/src/styles.scss
@@ -891,6 +891,7 @@ a:focus {
   font-size: 24px;
   margin: 0 5px;
   border-radius: 100%;
+  border: #ffffff;
 }
 
 /* client section end */
@@ -912,6 +913,7 @@ a:focus {
   outline: none;
   color: #000000;
   border-radius: 5px;
+  border: #ffffff;
 }
 
 .contact_section .form_container input::-webkit-input-placeholder {
