--- a/src/app/pages/cart/cart/cart.component.html
+++ b/src/app/pages/cart/cart/cart.component.html
@@ -2,10 +2,18 @@
   <nb-layout-column>
     <nb-card>
       <nb-card-body>
-        <div class="row col">
-          <h1 id="title" class="title text-center">{{"cart.title" | translate }}</h1>
+        <div class="row col" *ngIf="nbProductInCart !== 0">
+          <h1 id="title" class="title text-center">{{"cart.title" | translate }}</h1> 
         </div>
-        <div>
+          <div *ngIf="nbProductInCart === 0">
+            <h2 class= "text-center title">{{'cart.empty' | translate}} <i class="fa-solid fa-lg fa-heart-crack"></i> </h2> 
+            <div class="d-flex justify-content-center">
+              <button nbButton  (click)="goMenu()" type="button" class="home-button">
+                {{'button.navigateToCart' | translate}}
+                </button>
+            </div>
+        </div>
+        <div *ngIf="nbProductInCart !== 0">
           <app-shopping-cart-item *ngFor="let groupedCommandeProduct of getCommandeProductByKeyAndCommentArrays()"
                                   [groupedCommandeProduct]="groupedCommandeProduct">
           </app-shopping-cart-item>
