Avancée sur le panier: partie de facture

--- a/src/app/pages/Shared/components/shopping-cart-item/shopping-cart-item.component.html
+++ b/src/app/pages/Shared/components/shopping-cart-item/shopping-cart-item.component.html
@@ -1,10 +1,10 @@
-<div class="col-md-8" >
+<div >
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row no-gutters">
             <div class="col-md-4 box">
                 <img src="https://static.750g.com/images/600-600/fa94d52dd749d587b7fd75e4a918174b/pizza.png" alt="">
             </div>
-            <div class="col-md-8">
+            <div >
                 <div class="card-body">
                     <div style="position: relative;">
                         <h5 class="card-title">{{groupedCommandeProduct[0]?.product?.libelle}}</h5>
